--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -8,11 +8,11 @@
 	<div>
 
 		<div class="container-fluid">
-			<h1 align="center"
-				style="line-height: 200.0%; background-color: #ffffff; margin-top: 12.0pt; text-align: center;">
+			<h1
+				style="line-height: 200.0%; background-color: #ffffff; margin-top: 12.0pt;">
 				<span
-					style="font-family: 'comic sans ms', sans-serif; font-size: 50.0px; color: #112987;">Food
-					Blog</span>
+					style="font-family: 'comic sans ms', sans-serif; font-size: 50.0px; color: #112987;"
+					text-align="center">Food Blog</span>
 			</h1>
 		</div>
 		<div class="container-fluid"></div>
@@ -21,7 +21,7 @@
 			<br />
 			<div class="row content">
 				<div class="col-sm-3 sidenav" style="background-color: #c4f9fc;">
-					<h3 style="background-color: #c4f6fc;" align = "center">
+					<h3 style="background-color: #c4f6fc;" align="center">
 						<span style="color: #0d26be;">Food Blog</span>
 					</h3>
 					<br />
