--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -7,12 +7,12 @@
 	{{> include/navigation}}
 	<div>
 
-		<div class="container-fluid">
+		<div class="container-fluid" text-align="center'>
 			<h1
 				style="line-height: 200.0%; background-color: #ffffff; margin-top: 12.0pt;">
-				<span
+				<div
 					style="font-family: 'comic sans ms', sans-serif; font-size: 50.0px; color: #112987;"
-					text-align="center">Food Blog</span>
+					text-align="center">Food Blog</div>
 			</h1>
 		</div>
 		<div class="container-fluid"></div>
