--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -8,11 +8,10 @@
 	<div>
 
 		<div class="container-fluid" text-align="center'>
-			<h1
-				style="line-height: 200.0%; background-color: #ffffff; margin-top: 12.0pt;">
-				<div
-					style="font-family: 'comic sans ms', sans-serif; font-size: 50.0px; color: #112987;"
-					text-align="center">Food Blog</div>
+			<h1 style="
+			line-height: 200.0%; background-color:#ffffff; margin-top: 12.0pt;">
+			<div
+				style="font-family: 'comic sans ms', sans-serif; font-size: 50.0px; color: #112987;">1줄의 라인 잡기 위한 것임</div>
 			</h1>
 		</div>
 		<div class="container-fluid"></div>
@@ -22,7 +21,7 @@
 			<div class="row content">
 				<div class="col-sm-3 sidenav" style="background-color: #c4f9fc;">
 					<h3 style="background-color: #c4f6fc;" align="center">
-						<span style="color: #0d26be;">Food Blog</span>
+						<span style="color: #0d26be;">The Table of Contents</span>
 					</h3>
 					<br />
 					<ul class="nav nav-pills nav-stacked">
@@ -69,9 +68,9 @@
 					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
 				</div>
 				<div class="col-sm-9">
-					<span
-						style="font-family: 'comic sans ms', sans-serif; font-size: 40.0px; font-weight: bolder; color: #112987;">Food
-						blog </span> <br /> <br /> <br />
+					<div
+						style="font-family: 'comic sans ms', sans-serif; font-size: 40.0px; font-weight: bolder; color: #112987; text-align:center;">Food
+						blog </div> <br /> <br /> <br />
 
 					<div
 						style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
