--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -68,9 +68,10 @@
 					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
 				</div>
 				<div class="col-sm-9">
+				<br/><br/>
 					<div
 						style="font-family: 'comic sans ms', sans-serif; font-size: 40.0px; font-weight: bolder; color: #112987; text-align:center;">Food
-						blog </div> <br /> <br /> <br />
+						blog </div> <br /> <br />
 
 					<div
 						style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
