--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -7,15 +7,10 @@
 	{{> include/navigation}}
 	<div>
 
-		<div class="container-fluid" text-align="center'>
-			<h1 style="
-			line-height: 200.0%; background-color:#ffffff; margin-top: 12.0pt;">
-			<div
-				style="font-family: 'comic sans ms', sans-serif; font-size: 50.0px; color: #112987;">1줄의 라인 잡기 위한 것임</div>
-			</h1>
-		</div>
-		<div class="container-fluid"></div>
-		<div class="container-fluid"></div>
+
+		<div style="font-family: 'comic sans ms', sans-serif; font-size: 50.0px; color: #112987;">1줄의 라인 잡기 위한 것임</div>
+
+
 		<div class="container-fluid">
 			<br />
 			<div class="row content">
@@ -68,10 +63,12 @@
 					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
 				</div>
 				<div class="col-sm-9">
-				<br/><br/>
+					<br />
+					<br />
 					<div
-						style="font-family: 'comic sans ms', sans-serif; font-size: 40.0px; font-weight: bolder; color: #112987; text-align:center;">Food
-						blog </div> <br /> <br />
+						style="font-family: 'comic sans ms', sans-serif; font-size: 40.0px; font-weight: bolder; color: #112987; text-align: center;">Food
+						blog</div>
+					<br /> <br />
 
 					<div
 						style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
