--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -15,8 +15,9 @@
 			<br />
 			<div class="row content">
 				<div class="col-sm-3 sidenav" style="background-color: #c4f9fc;">
-					<h3 style="background-color: #c4f6fc;" align="center">
-						<span style="color: #0d26be;">The Table of Contents</span>
+				<br/>
+					<h3 align="center">
+						<div style="color: #0d26be;">The Table of Contents</div>
 					</h3>
 					<br />
 					<ul class="nav nav-pills nav-stacked">
@@ -36,8 +37,7 @@
 						<li class="active"><a href="#no14">된장국</a></li>
 						<li class="active"><a href="#no15">생선초밥</a></li>
 					</ul>
-					                      <span
-						style="background-color: #d9534f; color: #ffffff; font-size: 18.0px; font-weight: bold; text-align: center; white-space: nowrap;"></span>
+					                      
 					<div class="input-group">
 						<span
 							style="font-family: 'Open Sans', sans-serif; font-size: small;"> 
