--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -14,7 +14,7 @@
 		<div class="container-fluid">
 			<br />
 			<div class="row content">
-				<div class="col-sm-3 sidenav" style="background-color: #c4f9fc;">
+				<div class="col-sm-3 sidenav" style="background-color: #c4f9fc; height: 3000px;">
 				<br/>
 					<h3 align="center">
 						<div style="color: #0d26be;">The Table of Contents</div>
@@ -62,6 +62,7 @@
 					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
 					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
 				</div>
+				
 				<div class="col-sm-9">
 					<br />
 					<br />
