--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -8,14 +8,17 @@
 	<div>
 
 
-		<div style="font-family: 'comic sans ms', sans-serif; font-size: 50.0px; color: #112987;">1줄의 라인 잡기 위한 것임</div>
+		<div
+			style="font-family: 'comic sans ms', sans-serif; font-size: 50.0px; color: #112987;">1줄의
+			라인 잡기 위한 것임</div>
 
 
 		<div class="container-fluid">
 			<br />
 			<div class="row content">
-				<div class="col-sm-3 sidenav" style="background-color: #c4f9fc; height: 3000px;">
-				<br/>
+				<div class="col-sm-3 sidenav"
+					style="background-color: #c4f9fc; height: 16000px;">
+					<br />
 					<h3 align="center">
 						<div style="color: #0d26be;">The Table of Contents</div>
 					</h3>
@@ -37,35 +40,10 @@
 						<li class="active"><a href="#no14">된장국</a></li>
 						<li class="active"><a href="#no15">생선초밥</a></li>
 					</ul>
-					                      
-					<div class="input-group">
-						<span
-							style="font-family: 'Open Sans', sans-serif; font-size: small;"> 
-							       </span>
-					</div>
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
-					<br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
 				</div>
-				
+
 				<div class="col-sm-9">
-					<br />
-					<br />
+					<br /> <br />
 					<div
 						style="font-family: 'comic sans ms', sans-serif; font-size: 40.0px; font-weight: bolder; color: #112987; text-align: center;">Food
 						blog</div>
