--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -9,9 +9,7 @@
 
 
 		<div
-			style="font-family: 'comic sans ms', sans-serif; font-size: 50.0px; color: #112987;">1줄의
-			라인 잡기 위한 것임</div>
-
+			style="font-family: 'comic sans ms', sans-serif; font-size: 50.0px; color: #112987; height: 60px;"></div>
 
 		<div class="container-fluid">
 			<br />
@@ -43,11 +41,11 @@
 				</div>
 
 				<div class="col-sm-9">
-					<br /> <br />
+					<br/>
 					<div
-						style="font-family: 'comic sans ms', sans-serif; font-size: 40.0px; font-weight: bolder; color: #112987; text-align: center;">Food
+						style="font-family: 'comic sans ms', sans-serif; font-size: 40.0px; font-weight: bolder; color: #112987; text-align: center; height: 70px;">Food
 						blog</div>
-					<br /> <br />
+					
 
 					<div
 						style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
