--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -95,6 +95,7 @@
 						<hr />
 						<section id="no2" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
+							<h1 style ="text-align: center;">메밀국수(자루소바)(30분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/돈부리_메밀국수.jpg" alt="picture 2" width="513"
@@ -108,7 +109,7 @@
 										allowfullscreen></iframe>
 								</div>
 							</div>
-							<h1>메밀국수(자루소바)(30분)</h1>
+
 							<ol>
 								<li>가쓰오다시 1C : 물 1C+다시 넣고 끓으면 다시만 버리고 다시물을 공기에 담아서 가쓰오부시를
 									위에 넣어두고 8분간 우린다.(나중에 면포를 깐 채반위에 부어서 찌꺼기가 없는 맑은 가쓰오다시를 만든다.)</li>
