--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -145,20 +145,21 @@
 						<hr />
 						<section id="no3" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
+							<h1 style="text-align: center;">전복버터구이(25분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200502_163430.jpg" alt="picture 3"
 										width="513" height="312" align="center">
 								</div>
-								<div>
+								<div id="youtube">
 									<iframe width="513" height="312"
 										src="https://www.youtube.com/embed/rvUfekJhyeg"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; overflow: hidden"
 										allowfullscreen></iframe>
-								</div id="youtube">
+								</div>
 							</div>
-							<h1>전복버터구이(25분)</h1>
+
 							<ol>
 								<li>깻잎 : 찬물에 넣어두고 성형 : 다이아몬드 모양.</li>
 								<li>전복 : 소금으로 문질러서 씻은 후 껍질과 내장 분리 : 전복 껍질의 얇상한 쪽에서 숫가락을 넣어서
