--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -95,7 +95,7 @@
 						<hr />
 						<section id="no2" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
-							<h1 style ="text-align: center;">메밀국수(자루소바)(30분)</h1>
+							<h1 style="text-align: center;">메밀국수(자루소바)(30분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/돈부리_메밀국수.jpg" alt="picture 2" width="513"
@@ -182,6 +182,7 @@
 						<hr />
 						<section id="no4" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
+							<h1 style="text-align: center;">달걀찜(30분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200502_163432.jpg" alt="picture 4"
@@ -195,7 +196,6 @@
 										allowfullscreen></iframe>
 								</div>
 							</div>
-							<h1>달걀찜(30분)</h1>
 							<ol>
 								<li>가쓰오다시 1/2C : 물 1/2C+다시 넣고 끓으면 다시만 버리고 다시물을 공기에 담아서
 									가쓰오부시를 위에 넣어두고 8분간 우린다 그 후에 면포를 깐 채반위에 부어서 찌꺼기가 없는 맑은 가쓰오다시를
@@ -227,6 +227,7 @@
 						<hr />
 						<section id="no5" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
+							<h1 style="text-align: center;">도미술찜(30분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200509_145051.jpg" alt="picture 5"
@@ -240,7 +241,6 @@
 										allowfullscreen></iframe>
 								</div>
 							</div>
-							<h1>도미술찜</h1>
 							<ol>
 								<li>다시물 1/2C, 쑥갓: 찬물.</li>
 								<li>도미: 비늘, 지느러미, 아가미, 내장 제거 - 꼬리 V자 성형, 몸통 세장뜨기, 머리 2등분 -
@@ -265,6 +265,7 @@
 						<hr />
 						<section id="no6" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
+							<h1 style="text-align: center;">해삼초회(20분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200509_145054.jpg" alt="picture 6"
@@ -278,7 +279,6 @@
 										allowfullscreen></iframe>
 								</div>
 							</div>
-							<h1>해삼초회(20분)</h1>
 							<ol>
 								<li>가쓰오다시 1/2C : 물 1/2C+다시 넣고 끓으면 다시만 버리고 다시물을 공기에 담아서
 									가쓰오부시를 위에 넣어두고 8분간 우린다 그 후에 면포를 깐 채반위에 부어서 찌꺼기가 없는 맑은 가쓰오다시를
@@ -303,6 +303,7 @@
 						<hr />
 						<section id="no7" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
+							<h1 style="text-align: center;">도미머리맑은국(30분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200509_173912.jpg" alt="picture 7"
@@ -316,7 +317,6 @@
 										allowfullscreen></iframe>
 								</div>
 							</div>
-							<h1>도미머리맑은국(30분)</h1>
 							<ol>
 								<li>도미손질: 도미머리 2등분 - 소금 - 데침.</li>
 								<li>대파 4~5Cm 채 -찬물.</li>
@@ -340,6 +340,7 @@
 						<hr />
 						<section id="no8" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
+							<h1 style="text-align: center;">도미조림(30분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200509_163756.jpg" alt="picture 8"
@@ -353,7 +354,6 @@
 										allowfullscreen></iframe>
 								</div>
 							</div>
-							<h1>도미조림</h1>
 							<ol>
 								<li>다시물 1C.</li>
 								<li>도미: 비늘, 지느러미, 아가미, 내장 제거 - 머리 2등분, 몸통과 꼬리 5Cm, 꼬리 V자 성형
@@ -377,6 +377,7 @@
 						<hr />
 						<section id="no9" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
+							<h1 style="text-align: center;">김초밥(25분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200516_144207.jpg" alt="picture 9"
@@ -390,7 +391,6 @@
 										allowfullscreen></iframe>
 								</div>
 							</div>
-							<h1>김초밥</h1>
 							<ol>
 								<li>깻잎: 찬물 / 배합초 : 식초 3T, 설탕 2T, 소금 1t - 밥에 넣어 코팅.</li>
 								<li>생강: 얇게 편썰어 데친 후 배합초 절임 -> 장미모양.</li>
@@ -413,6 +413,7 @@
 						<hr />
 						<section id="no10" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
+							<h1 style="text-align: center;">대합맑은국(20분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200516_144210.jpg" alt="picture 10"
@@ -426,7 +427,6 @@
 										allowfullscreen></iframe>
 								</div>
 							</div>
-							<h1>대합맑은국</h1>
 							<ol>
 								<li>조개: 소금물 해감 / 쑥갓: 찬물.</li>
 								<li>레몬: 오리발.</li>
@@ -445,6 +445,7 @@
 						<hr />
 						<section id="no11" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
+							<h1 style="text-align: center;">갑오징어명란무침(20분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200516_162528.jpg" alt="picture 11"
@@ -458,7 +459,6 @@
 										allowfullscreen></iframe>
 								</div>
 							</div>
-							<h1>갑오징어명란무침</h1>
 							<ol>
 								<li>깻잎, 무순: 찬물.</li>
 								<li>갑오징어: 0.3cm로 두깨로 포 뜬 후 채 - 50도 청주물에 데치기.</li>
@@ -477,6 +477,7 @@
 						<hr />
 						<section id="no12" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
+							<h1 style="text-align: center;">야끼우동(30분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200516_162530.jpg" alt="picture 12"
@@ -490,7 +491,6 @@
 										allowfullscreen></iframe>
 								</div>
 							</div>
-							<h1>야끼우동</h1>
 							<ol>
 								<li>숙주: 거두절미.</li>
 								<li>양파, 피망, 당근, 표고 : 4cm 채.</li>
@@ -512,6 +512,7 @@
 						<hr />
 						<section id="no13" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
+							<h1 style="text-align: center;">소고기간장구이(20분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200523_143557.jpg" alt="picture 1"
@@ -525,7 +526,6 @@
 										allowfullscreen></iframe>
 								</div>
 							</div>
-							<h1>소고기간장구이</h1>
 							<ol>
 								<li>다시물 1/2C.</li>
 								<li>다래소스: 다시물4T + 간장 2T + 설탕 2T + 청주 2T + 맛술 2T - 윤기나고 걸죽하게
@@ -546,6 +546,7 @@
 						<hr />
 						<section id="no14" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
+							<h1 style="text-align: center;">된장국(20분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200523_151850.jpg" alt="picture 1"
@@ -559,7 +560,6 @@
 										allowfullscreen></iframe>
 								</div>
 							</div>
-							<h1>된장국</h1>
 							<ol>
 								<li>가쓰오다시 2C.</li>
 								<li>미역: 불린 후 데치기(많이 불리면 안 데쳐도 됨) - 1~2cm 성형.</li>
@@ -580,6 +580,7 @@
 						<hr />
 						<section id="no15" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
+							<h1 style="text-align: center;">생선초밥(40분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200523_172610.jpg" alt="picture 1"
@@ -593,7 +594,6 @@
 										allowfullscreen></iframe>
 								</div>
 							</div>
-							<h1>생선초밥</h1>
 							<ol>
 								<li>배합초: 식초 3T + 설탕 2T + 소금 1t - 밥 코팅 .</li>
 								<li>깻잎: 찬물 / 생강: 편썰어 데쳐 배합초 - 장미 / 와사비: 물과 동량.</li>
