--- a/src/main/resources/templates/navigation/about.html
+++ b/src/main/resources/templates/navigation/about.html
@@ -111,7 +111,7 @@
 										<ul class="prod-list">
 											<li><img src="images/JTLoan.jpg">
 												<div class="caption">
-													<a href="http://landing.loan.jtchinae-bank.co.kr"
+													<a href="http://loan.jtchinae-bank.co.kr"
 														target="_blank">JT Loan Site</a>
 													<h1>portfolio 1</h1>
 													<p>Direct Loan Site for Customer</p>
@@ -132,7 +132,7 @@
 								<!-- 이미지로 버튼만들려면 -->
 								<a href="#" class="jcm-top"> <img
 									src="./images/arrow-up.png"
-									style="margin-bottom: 24px; width: 25px;">
+									style="margin-bottom: 24px; width: 45px;">
 								</a>
 
 								<footer>
