--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -623,7 +623,11 @@
 			</div>
 		</div>
 	</div>
-
+								<!-- 이미지로 버튼만들려면 -->
+								<a href="#" class="jcm-top"> <img
+									src="./images/arrow-up.png"
+									style="margin-bottom: 24px; width: 45px;">
+								</a>
 	{{> include/footer}}
 </body>
 </html>
