--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -37,6 +37,10 @@
 						<li class="active"><a href="#no13">소고기간장구이</a></li>
 						<li class="active"><a href="#no14">된장국</a></li>
 						<li class="active"><a href="#no15">생선초밥</a></li>
+						<li class="active"><a href="#no16">달걀말이</a></li>
+						<li class="active"><a href="#no17">참치김초밥</a></li>
+						<li class="active"><a href="#no18">삼치소금구이</a></li>
+						<li class="active"><a href="#no19">문어초회</a></li>
 					</ul>
 				</div>
 
