--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -676,13 +676,10 @@
 							<ol>
 								<li>배합초: 식초 3T + 설탕 2T + 소금 1t - 밥 코팅 .</li>
 								<li>깻잎: 찬물 / 생강: 편썰어 데쳐 배합초 - 장미 / 와사비: 물과 동량.</li>
-								<li>새우: 머리,내장, 물총 제거 후 꼬치 꽂아 삶아서 껍질 제거 후 반으로 펼침.</li>
-								<li>문어: 간장 & 식초 물에 데침 - 물결 모양.</li>
-								<li>참치: 소금물 - 7*3*0.5cm 직사각형.</li>
-								<li>광어, 도미: 껍질 제거 후 7*3cm 포.</li>
-								<li>꽁치: 세장 뜨기 - 겉껍질 제거 후 잔 칼집.</li>
-								<li>밥: 오른손 / 생선: 왼손 - 와사비 올려 모양 잡기.</li>
-								<li>완성 접시 - 깻잎, 초생강(장미), 초밥 8개 + 간장종지 제출.</li>
+								<li>참치: 소금물 해동 - 사방 1cm 성형 후 면보.</li>
+								<li>와사비: 물과 동량(되직하게).</li>
+								<li>김 - 반으로 잘라 구운 후 식혀 봉지에 보관 - 밥을 3/4정도 일정하게 펼친 후 와사비 넣고 참치 올려 말기 - 12등분.</li>
+								<li>완성 접시에 깻잎, 생강 참치김초밥 올려 마무리 + 간장종지.</li>
 								<br />* 시간 없음
 								<br />
 								<br />
@@ -701,7 +698,7 @@
 							<h1 style="text-align: center;">삼치소금구이(30분)</h1>
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/20200523_172610.jpg" alt="picture 1"
+									<img src="../images/20200530_164014.jpg" alt="picture 1"
 										width="513" height="312" align="center">
 								</div>
 								<div id="youtube">
@@ -713,15 +710,12 @@
 								</div>
 							</div>
 							<ol>
-								<li>배합초: 식초 3T + 설탕 2T + 소금 1t - 밥 코팅 .</li>
-								<li>깻잎: 찬물 / 생강: 편썰어 데쳐 배합초 - 장미 / 와사비: 물과 동량.</li>
-								<li>새우: 머리,내장, 물총 제거 후 꼬치 꽂아 삶아서 껍질 제거 후 반으로 펼침.</li>
-								<li>문어: 간장 & 식초 물에 데침 - 물결 모양.</li>
-								<li>참치: 소금물 - 7*3*0.5cm 직사각형.</li>
-								<li>광어, 도미: 껍질 제거 후 7*3cm 포.</li>
-								<li>꽁치: 세장 뜨기 - 겉껍질 제거 후 잔 칼집.</li>
-								<li>밥: 오른손 / 생선: 왼손 - 와사비 올려 모양 잡기.</li>
-								<li>완성 접시 - 깻잎, 초생강(장미), 초밥 8개 + 간장종지 제출.</li>
+								<li>다시물 1C.</li>
+								<li>삼치: 3장뜨기 - X자 칼집 - 소금 -수분제거 -쇠꼬챙이에 끼워 익히기.</li>
+								<li>무: 3*3*3cm, 0.2cm 간격으로 칼집(국화꽃모양) - 다시물 3T, 설탕 1T, 식초 1T, 소금 소량에 절이기.</li>
+								<li>우엉: 껍질제거 - 5*0.5*0.5cm - 냄비(식용유) 볶기 - 조림장( 1/2C, 간장 1T, 설탕 1T, 맛술 1T, 청주 1T) 넣고 윤기나게 졸이기 - 양끝에 깨 묻히기.</li>
+								<li>레몬: 웨지 모양 + 레몬껍질 다지기(국화꽃 수술).</li>
+								<li>깻잎, 삼치, 레몬 웨지, 무(국화꽃+레몬껍질), 우엉 담아 마무리.</li>
 								<br />* 시간 없음
 								<br />
 								<br />
@@ -740,7 +734,7 @@
 							<h1 style="text-align: center;">문어초회(20분)</h1>
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/20200523_172610.jpg" alt="picture 1"
+									<img src="../images/20200530_164018.jpg" alt="picture 1"
 										width="513" height="312" align="center">
 								</div>
 								<div id="youtube">
