--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -648,12 +648,11 @@
 								<br />
 								<br />
 								<h3>요구사항</h3>
-								<br />가. 각 생선류와 채소를 초밥용으로 손질하시오.
-								<br />나. 초밥초(스시스)를 만들어 밥에 간하여 식히시오.
-								<br />다. 곁들일 초생강을 만드시오.
-								<br />라. 쥔초밥(니기리스시)을 만드시오.
-								<br />마. 생선초밥 8개를 만들어 제출하시오.
-								<br />바. 간장을 곁들여 내시오.
+								<br />가. 달걀과 가다랑어국물(가쓰오다시), 소금, 설탕, 맛술(미림)을 섞은 후 체에 걸러 사용하시오.
+								<br />나. 젓가락을 사용하여 달걀말이를 한 후 김발을 이용하여 사각모양을 만드시오.
+								<br />   (단, 달걀을 말 때 주걱이나 손을 사용할 경우 감점 처리)
+								<br />다. 길이 8cm, 높이 2.5cm, 두께 1cm 정도로 썰어 8개를 만들고, 완성되었을 때 틈새가 없도록 하시오.
+								<br />라. 달걀말이(다시마끼)와 간장무즙을 접시에 보기 좋게 담아내시오.
 							</ol>
 						</section>
 						<hr />
@@ -685,12 +684,10 @@
 								<br />
 								<br />
 								<h3>요구사항</h3>
-								<br />가. 각 생선류와 채소를 초밥용으로 손질하시오.
-								<br />나. 초밥초(스시스)를 만들어 밥에 간하여 식히시오.
-								<br />다. 곁들일 초생강을 만드시오.
-								<br />라. 쥔초밥(니기리스시)을 만드시오.
-								<br />마. 생선초밥 8개를 만들어 제출하시오.
-								<br />바. 간장을 곁들여 내시오.
+								<br />가. 김을 반장으로 자르고, 눅눅하거나 구어지지 않은 김은 구워 사용하시오.
+								<br />나. 고추냉이와 초생각을 만드시오.
+								<br />다. 초밥 2줄은 일정한 크기 12개로 잘라 내시오.
+								<br />라. 간장을 곁들여 내시오.
 							</ol>
 						</section>
 						<hr />
@@ -723,12 +720,11 @@
 								<br />
 								<br />
 								<h3>요구사항</h3>
-								<br />가. 각 생선류와 채소를 초밥용으로 손질하시오.
-								<br />나. 초밥초(스시스)를 만들어 밥에 간하여 식히시오.
-								<br />다. 곁들일 초생강을 만드시오.
-								<br />라. 쥔초밥(니기리스시)을 만드시오.
-								<br />마. 생선초밥 8개를 만들어 제출하시오.
-								<br />바. 간장을 곁들여 내시오.
+								<br />가. 삼치는 세장뜨기한 후 소금을 뿌려 10~20분 후 씻고 쇠꼬챙이에 끼워 구워내시오.
+								<br />   (단, 석쇠를 사용할 경우 감점 처리)
+								<br />나. 채소는 각각 초담금 및 조림을 하시오
+								<br />다. 구이 그릇에 삼치소금구이와 곁들임을 담아 완성하시오
+								<br />라. 길이 10cm정도로 2조각을 제출하시오.
 							</ol>
 						</section>
 						<hr />
@@ -760,12 +756,11 @@
 								<br />
 								<br />
 								<h3>요구사항</h3>
-								<br />가. 각 생선류와 채소를 초밥용으로 손질하시오.
-								<br />나. 초밥초(스시스)를 만들어 밥에 간하여 식히시오.
-								<br />다. 곁들일 초생강을 만드시오.
-								<br />라. 쥔초밥(니기리스시)을 만드시오.
-								<br />마. 생선초밥 8개를 만들어 제출하시오.
-								<br />바. 간장을 곁들여 내시오.
+								<br />가. 가다랑어국물을 만들어 양념초간장(도사스)을 만드시오.
+								<br />나. 문어는 삶아 4~5cm 길이로 물결모양썰기(하조기리)를 하시오.
+								<br />다. 미역은 손질하여 4~5cm 정도 크기로 사용하시오.
+								<br />라. 오이는 둥글게 썰거나 줄무늬(자바라) 썰기 하여 사용하시오.
+								<br />마. 문어초회 접시에 오이와 문어를 담고 양념초간장(도사스)을 끼얹어 레몬으로 장식하시오.
 							</ol>
 						</section>
 						<hr />
